[package]
name = "nyx-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Nyx Core Development Team"]
description = "Cryptographic primitives for the Nyx blockchain - quantum-resistant, privacy-preserving"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nyx-blockchain/nyx-crypto"
keywords = ["cryptography", "blockchain", "quantum-resistant", "privacy", "ring-signatures"]
categories = ["cryptography", "no-std"]

[dependencies]
# Hashing
blake3 = "1.5"
sha3 = "0.10"  # For Keccak

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"

# Random number generation
rand = { version = "0.8", features = ["std_rng"] }
rand_core = "0.6"

# Error handling
thiserror = "1.0"

# Encryption (AES-GCM)
aes-gcm = "0.10"

# Curve operations for stealth addresses (Ed25519)
curve25519-dalek = "4.1"
ed25519-dalek = "2.1"

# Zero on drop for sensitive data
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
# Testing utilities
criterion = "0.5"

[features]
default = ["std"]
std = []

# Removed the [[bench]] section that was causing the error
# Benchmarks can be added later when needed
