[package]
name = "nyx-network"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
libp2p = { version = "0.53", features = ["tcp", "dns", "identify"] }
blake3 = "1.5"
log = "0.4"
env_logger = "0.10"
nyx-core = { path = "../nyx-core" }
thiserror = "1.0"
