[package]
name = "nyx-network"
version = "0.1.0"
edition = "2021"
authors = ["Nyx Core Development Team"]
description = "P2P networking layer for the Nyx blockchain - gossip, sync, and peer management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nyx-blockchain/nyx-network"
keywords = ["blockchain", "p2p", "networking", "gossip", "sync"]
categories = ["network-programming"]

[dependencies]
# Internal dependencies
nyx-core = { path = "../nyx-core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"

# Utilities
rand = "0.8"
hex = "0.4"

# Time utilities
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
